# ClusterMesh

./: .gitignore  LICENSE  README.md  Sparkpool  pyproject.toml
config/: sites.example.yaml
docs/: api-spec.md  architecture.md  fault-tolerance.md  join-mesh.md  publish-git.md  publish-pypi.md  roadmap.md  testing-strategy.md
examples/: checkpoint_recovery.py  phase3_demo.py  run_agent.py  run_driver.py  run_remote_job.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  useStream.ts
frontend/src/components/: Badge.tsx  Header.tsx  Layout.tsx  (+5 more)
mesh/: __init__.py  cli.py
mesh/agent/: __init__.py  client.py  config.py  daemon.py  executor.py  host_metrics.py  library.py  monitor.py  preemption.py  server.py  shell.py
mesh/api/: __init__.py  app.py  auth.py  context.py  events.py  server.py
mesh/discovery/: __init__.py  mdns.py
mesh/driver/: __init__.py  cluster.py  job_manager.py  library_installer.py  server.py
mesh/execution/: __init__.py  executor.py
mesh/health/: __init__.py  heartbeat.py
mesh/libraries/: manager.py
mesh/memory/: __init__.py  fabric.py
mesh/meshvpn/: __init__.py  coordinator.py  relay.py  site.py
mesh/models/: __init__.py  enums.py  job.py  node.py  task.py
mesh/notebook/: __init__.py  runner.py
mesh/proto/: __init__.py  mesh.proto  mesh_pb2.py  mesh_pb2_grpc.py
mesh/recovery/: __init__.py  checkpoint.py  replication.py  speculation.py  work_stealing.py
mesh/scheduler/: __init__.py  benchmark.py  placement.py  pools.py  rebalancing.py  scoring.py
mesh/sdk/: __init__.py  decorator.py  units.py
mesh/sim/: __init__.py  agent.py  chaos.py  clock.py  cluster.py  demo.py  soak.py
mesh/state/: __init__.py  factory.py  postgres_store.py  redis_store.py  serialize.py  sqlite_store.py  store.py
mesh/tasks/: __init__.py  builtins.py  registry.py
mesh/worker/: __init__.py  runtime.py  server.py  state.py
scripts/: dogfood.sh  generate_proto.sh  install.sh  publish-pypi.sh
tests/: test_agent_monitor.py  test_api.py  test_execution.py  test_grpc.py  test_ha.py  test_heartbeat.py  test_host_metrics.py  test_integration.py  test_library.py  test_library_installer.py  test_notebook.py  test_phase4.py  test_phase6.py  test_phase7.py  test_phase8.py  test_preemption.py  test_scheduler.py  test_sdk.py  test_shell.py  test_sim.py  test_state_store.py  test_worker.py
(+15 files in other folders)
