[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clustermesh"
version = "0.9.0"
description = "Enterprise compute fabric — pip install on any machine to join a compute cluster"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "ClusterMesh Team" }]
keywords = ["compute", "cluster", "distributed", "scheduler", "grpc", "mesh"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Clustering",
]
dependencies = [
    "grpcio>=1.60",
    "protobuf>=4.25",
    "psutil>=5.9",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "grpcio-tools>=1.60",
    "httpx>=0.27",
]
postgres = ["psycopg[binary]>=3.1"]
redis = ["redis>=5.0"]
discovery = ["zeroconf>=0.131"]
phase6 = [
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "zeroconf>=0.131",
]

[project.scripts]
clustermesh = "mesh.cli:main"
mesh-demo = "mesh.sim.demo:main"
mesh-driver = "mesh.driver.server:main"
mesh-agent = "mesh.agent.daemon:main"
mesh-dashboard = "mesh.api.server:main"
mesh-platform = "mesh.api.server:main"
mesh-soak = "mesh.sim.soak:main"
mesh-bench = "mesh.scheduler.benchmark:main"
mesh-relay = "mesh.meshvpn.relay:main_relay"

[project.urls]
Homepage = "https://github.com/clustermesh/clustermesh"
Documentation = "https://github.com/clustermesh/clustermesh/blob/main/docs/join-mesh.md"

[tool.hatch.build.targets.wheel]
packages = ["mesh"]

[tool.hatch.build.targets.wheel.force-include]
"mesh/proto/mesh.proto" = "mesh/proto/mesh.proto"
"mesh/worker/static/index.html" = "mesh/worker/static/index.html"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["mesh"]
omit = ["mesh/sim/demo.py", "mesh/proto/mesh_pb2*.py"]
